--- a/index.html
+++ b/index.html
@@ -132,28 +132,49 @@ class: home
           <div class="row">
             <div class="col-xs-12">
               <h1 class="title"><a id="rejoignez-nous" href="#rejoignez-nous" data-toggle="modal" data-target="#rejoignez-nous-modal">Rejoignez nous !</a></h1>
-              <p>Envie de vous renouveler ? Rejoignez les Scalers !</p>
+              <p><a id="rejoignez-nous-2" href="#rejoignez-nous" data-toggle="modal" data-target="#rejoignez-nous-modal">Envie de vous renouveler ? Rejoignez les Scalers !</a></p>
             </div>
             <div class="col-xs-12 col-md-4">
-              <h2>Cloud <span class="bold">Designer</span></h2>
-              <img src="{{"/images/cloud-designer.png"| relative_url }}" alt="Cloud Designer" />
-              <p>Vous avez une appétence pour l’analyse des besoins business et des enjeux stratégiques, de
+              <h2>
+                  <a id="rejoignez-nous-6" href="#rejoignez-nous" data-toggle="modal" data-target="#rejoignez-nous-modal">
+                      Cloud <span class="bold">Designer</span>
+                  </a></h2>
+              <a id="rejoignez-nous-3" href="#rejoignez-nous" data-toggle="modal" data-target="#rejoignez-nous-modal">
+                  <img src="{{"/images/cloud-designer.png"| relative_url }}" alt="Cloud Designer" /></a>
+              <p><a id="rejoignez-nous-7" href="#rejoignez-nous" data-toggle="modal" data-target="#rejoignez-nous-modal">
+                  Vous avez une appétence pour l’analyse des besoins business et des enjeux stratégiques, de
                 solides bases techniques Cloud pour être à même de proposer des processus et des  architectures
-                réalistes bâties pour tenir et durer.</p>
+                réalistes bâties pour tenir et durer.</a></p>
             </div>
             <div class="col-xs-12 col-md-4">
-              <h2>Cloud <span class="bold">Builder</span></h2>
-              <img src="{{"/images/cloud-builder.png"| relative_url }}" alt="Cloud Builder" />
-              <p>Vous connaissez les briques utiles au fonctionnement d'un SI ou d'une usine logicielle. Vous aimez les
+              <h2>
+                  <a id="rejoignez-nous-8" href="#rejoignez-nous" data-toggle="modal" data-target="#rejoignez-nous-modal">
+                  Cloud <span class="bold">Builder</span
+                  ></a>
+              </h2>
+              <a id="rejoignez-nous-4" href="#rejoignez-nous" data-toggle="modal" data-target="#rejoignez-nous-modal">
+                  <img src="{{"/images/cloud-builder.png"| relative_url }}" alt="Cloud Builder" /></a>
+              <p>
+                  <a id="rejoignez-nous-9" href="#rejoignez-nous" data-toggle="modal" data-target="#rejoignez-nous-modal">
+                  Vous connaissez les briques utiles au fonctionnement d'un SI ou d'une usine logicielle. Vous aimez les
                 approches orientées services. Vous êtes bilingues DevOps. Venez construire et mettre en place des
-                solutions Cloud.</p>
+                solutions Cloud.</a></p>
             </div>
             <div class="col-xs-12 col-md-4">
-              <h2>Cloud <span class="bold">Runner</span></h2>
-              <img src="{{"/images/cloud-runner.png"| relative_url }}" alt="Cloud Runner" />
-              <p>Vous êtes un pro du système, de l'automatisation, du monitoring et du réseau. Vous avez le goût des
+              <h2>
+                  <a id="rejoignez-nous-10" href="#rejoignez-nous" data-toggle="modal" data-target="#rejoignez-nous-modal">
+                  Cloud <span class="bold">Runner</span>
+                  </a>
+              </h2>
+              <a id="rejoignez-nous-5" href="#rejoignez-nous" data-toggle="modal" data-target="#rejoignez-nous-modal">
+                  <img src="{{"/images/cloud-runner.png"| relative_url }}" alt="Cloud Runner" /></a>
+              <p>
+                  <a id="rejoignez-nous-11" href="#rejoignez-nous" data-toggle="modal" data-target="#rejoignez-nous-modal">
+                  Vous êtes un pro du système, de l'automatisation, du monitoring et du réseau. Vous avez le goût des
                 prods bien huilées et sécurisées. Vous aimez les architectures qui en imposent.
-                Venez opèrer et faire évoluer les solutions Cloud en lien direct avec les dévoloppeurs.</p>
+                Venez opèrer et faire évoluer les solutions Cloud en lien direct avec les dévoloppeurs.
+                </a>
+              </p>
             </div>
             {% include wescale-recrute.html %}
           </div>
