--- a/services.html
+++ b/services.html
@@ -21,23 +21,25 @@ class: services
                 <div class="col-md-6">
                     <h2>Identifier</h2>
 
-                    <p>Nous proposons l’étude du SI de l'entreprise, pour définir les meilleurs axes d'améliorations.</p>
+                    <p>Nous proposons l’étude de l'organisation et du SI de l'entreprise, pour définir les meilleurs
+                        axes d'améliorations.</p>
                     <ul>
-                        <li>identification des services du SI dont la transformation apportera la plus grande valeur
-                        </li>
+                        <li>Analyse des processus (value stream map, Rétrospective, interviews des acteurs)</li>
+                        <li>identification des services du SI dont la transformation apportera la plus grande valeur</li>
                         <li>préconisations (quel type de Cloud, quels fournisseurs de services Cloud)</li>
                         <li>propositions de bonnes pratiques sur la base de retours d’expériences</li>
+                        <li>Définition d'un Backlog de transformation DevOps</li>
                     </ul>
 
                     <h2>Réaliser</h2>
 
-
                     <p>Nos consultants prennent part à la mise en place des services Cloud préconisés quelle que soit la
-                        plate-forme de Cloud choisie :</p>
+                        plate-forme choisie :</p>
                     <ul>
                         <li>cloud public, privé ou hybride</li>
                         <li>automatisation de l'infrastructure et du déploiement</li>
                         <li>elasticité des plateformes</li>
+                        <li>coaching DevOps des équipes (collaboration, automatisation, agilité, tests)</li>
                     </ul>
 
                     <h2>Migrer</h2>
@@ -49,7 +51,7 @@ class: services
                         <li>migration technique</li>
                         <li>mise en place de bonnes pratiques (DevOps, automatisation, …)</li>
                         <li>run des services dans le Cloud</li>
-                        <li>évangélisation</li>
+                        <li>supervision et optimisation des coûts</li>
                     </ul>
 
                 </div>
