--- a/formations.html
+++ b/formations.html
@@ -29,6 +29,13 @@ class: formations
             </div>
           </div>
          {% endfor %}
+          <div class="row">
+            <div class="col-md-12">
+              <p style="text-align: center;font-weight: bold;">
+                wescale est agréé organisme de formation sous le numéro 11 75 553 1375.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
 
