Finalize contact page

--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,11 @@ class: contact
             <div class="col-md-8">
 
               <form method="POST" accept-charset="UTF-8" data-toggle="validator" id="contact-form">
-                <input type="text"  name="nom"  required placeholder="Nom*" />
-                <input type="text"  name="prenom" required placeholder="Prénom*" />
-                <input type="email" name="email"  required placeholder="Adresse e-mail*" />
-                <input type="text"  name="subject" required placeholder="Sujet*" />
-                <textarea name="message" required placeholder="Message*">
+                <input type="text"  name="nom"  required placeholder="Votre nom*" />
+                <input type="text"  name="prenom" required placeholder="Votre prénom*" />
+                <input type="email" name="email"  required placeholder="Votre adresse e-mail*" />
+                <input type="text"  name="subject" required placeholder="Objet de votre message*" />
+                <textarea name="message" required placeholder="Votre message*">
 
                 </textarea>
 
