Resize references logos in home page

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ class: home
     <img src="{{"/images/references/client-bpifrance.gif"| relative_url }}" alt=""  width="150px" />
 </a>
 <a href="https://www.ald.softbankrobotics.com/fr" target="_blank">
-    <img src="{{"/images/references/client-softbank-robotics.jpg"| relative_url }}" alt=""  width="150px" />
+    <img src="{{"/images/references/client-softbank-robotics.png"| relative_url }}" alt=""  width="150px" />
 </a>
 <a href="http://www.menlook.com/fr/" target="_blank">
     <img src="{{"/images/references/client-menlook.png"| relative_url }}" alt=""  width="150px" />
