--- a/a-propos.html
+++ b/a-propos.html
@@ -21,7 +21,7 @@ class: a-propos
                         l’imagination foisonnante pour créer les infrastructures cloud de demain.</b>
                     </p>
                     <p>
-                        Parce que c’est un milieu tellement vaste, qu’il évolue à une vitesse astronomique, nous
+                        Parce que c’est un milieu tellement vaste qu’il évolue à une vitesse astronomique, nous
                         cherchons dans
                         le monde entier des personnes comme nous, pour fonder ensemble une <b>véritable communauté
                         d’experts</b>.
