--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ class: home
               <p><a id="rejoignez-nous-7" href="#rejoignez-nous" data-toggle="modal" data-target="#rejoignez-nous-modal">
                   Vous avez une appétence pour l’analyse des besoins business et des enjeux stratégiques, de
                 solides bases techniques Cloud pour être à même de proposer des processus et des  architectures
-                réalistes bâties pour tenir et durer.</a></p>
+                réalistes, bâties pour tenir et durer.</a></p>
             </div>
             <div class="col-xs-12 col-md-4">
               <h2>
@@ -172,7 +172,7 @@ class: home
                   <a id="rejoignez-nous-11" href="#rejoignez-nous" data-toggle="modal" data-target="#rejoignez-nous-modal">
                   Vous êtes un pro du système, de l'automatisation, du monitoring et du réseau. Vous avez le goût des
                 prods bien huilées et sécurisées. Vous aimez les architectures qui en imposent.
-                Venez opèrer et faire évoluer les solutions Cloud en lien direct avec les dévoloppeurs.
+                Venez opèrer et faire évoluer les solutions Cloud en lien direct avec les développeurs.
                 </a>
               </p>
             </div>
