--- a/services.html
+++ b/services.html
@@ -24,11 +24,11 @@ class: services
                     <p>Nous proposons l’étude de l'organisation et du SI de l'entreprise, pour définir les meilleurs
                         axes d'améliorations.</p>
                     <ul>
-                        <li>Analyse des processus (value stream map, Rétrospective, interviews des acteurs)</li>
+                        <li>analyse des processus (value stream map, rétrospective, interviews des acteurs)</li>
                         <li>identification des services du SI dont la transformation apportera la plus grande valeur</li>
                         <li>préconisations (quel type de Cloud, quels fournisseurs de services Cloud)</li>
                         <li>propositions de bonnes pratiques sur la base de retours d’expériences</li>
-                        <li>Définition d'un Backlog de transformation DevOps</li>
+                        <li>définition d'un Backlog de transformation DevOps</li>
                     </ul>
 
                     <h2>Réaliser</h2>
@@ -38,7 +38,7 @@ class: services
                     <ul>
                         <li>cloud public, privé ou hybride</li>
                         <li>automatisation de l'infrastructure et du déploiement</li>
-                        <li>elasticité des plateformes</li>
+                        <li>élasticité des plateformes</li>
                         <li>coaching DevOps des équipes (collaboration, automatisation, agilité, tests)</li>
                     </ul>
 
