SEO - Improve index page title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Wescale - Cloud expert
+title: Wescale - Expert Cloud et DevOps
 class: home
 ---
     <section class="home-top">
