Implement real checkbox news field

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@ class: contact
                 <textarea name="message" required placeholder="Votre message*">
 
                 </textarea>
-                <input type="checkbox" name="keep-inform" value="J'autorise Wescale à me tenir informé par e-mail."> J'autorise Wescale à me tenir informé par e-mail.
+                <input type="checkbox" style="width: initial; display: inline-block" name="keep-inform" value="Me tenir informé"> J'autorise Wescale à me tenir informé par e-mail.
 
                 <input type="submit" value="Envoyer" />
               </form>
