--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ class: home
                 <div class="col-md-6">
                     <div class="techtrends">
                         <div class="techtrends-image">
-                            <a id="tt-link" href="#" data-toggle="modal" data-target="#myModal-conteneurs"><img src="{{"/images/couverture-tt-conteneurs-orig.png"|
+                            <a id="tt-link-conteneurs" href="#" data-toggle="modal" data-target="#myModal-conteneurs"><img src="{{"/images/couverture-tt-conteneurs-orig.png"|
                                 relative_url }}" alt="Techtrends Conteneurs" /></a>
                         </div>
                         <div class="techtrends-text">
@@ -97,7 +97,7 @@ class: home
                 <div class="col-md-6">
                     <div class="techtrends">
                         <div class="techtrends-image">
-                            <a id="tt-link" href="#" data-toggle="modal" data-target="#myModal-cloud"><img src="{{"/images/techtrends-cloud.png"|
+                            <a id="tt-link-cloud" href="#" data-toggle="modal" data-target="#myModal-cloud"><img src="{{"/images/techtrends-cloud.png"|
                                 relative_url }}" alt="Techtrends Cloud" /></a>
                         </div>
                         <div class="techtrends-text">
