--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ class: home
                     <div class="techtrends-title">
                         <h2 id="nos-techtrends">Nos Techtrends</h2>
                         <p>
-                            Chez Wescale nous avons la mission de partager nos connaissances et de faire grandir
+                            Chez Wescale, nous avons la mission de partager nos connaissances et de faire grandir
                             l’expertise autour de nous. Issu de notre expérience terrain, nous réunissons
                             régulièrement notre savoir-faire sous la forme de TechTrends. Nos TechTrends sont
                             focalisés sur une tendance technologique, ils vous en dressent l’état de l’art et
@@ -83,7 +83,7 @@ class: home
                                 Dans ce document, nous vous partageons notre vision des conteneurs. La première partie
                                 <b>Projeter</b> propose d’identifier différents cas d’usage des conteneurs. Par la
                                 suite, la partie <b>Implémenter</b> vous invite à construire une plateforme
-                                conteneurisée avec les bons outils. Pour finir, le chapître <b>Exploiter</b> vous aide à
+                                conteneurisée avec les bons outils. Pour finir, le chapitre <b>Exploiter</b> vous aide à
                                 faire vivre la plateforme conteneurisée.
                             </p>
                             <p class="news-readmore"><a href="#" data-toggle="modal"
