--- a/job.html
+++ b/job.html
@@ -1,77 +1,120 @@
 ---
 layout: default
 title: Job - Wescale - Cloud expert
-class: a-propos
+class: partenariats
 ---
+<section class="home-top">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 home-content">
+
+                <h1 class="title">Wescale recrute !</h1>
+                <p class="home-text">
+                    WeScale en quelques mots, c’est à la fois une start-up et une société de conseil, dédiée au cloud computing.
+                    Nous sommes une équipe de passionnés (chacun par ses sujets, qu’ils soient techniques ou non).
+                </p>
+                <h2>Rejoindre Wescale c'est :</h2>
+
+                <p class="home-text">
+                    <b>Faire vivre sa passion</b>, avec d'autres fous de cloud, d'automatisation, bref de développement
+                    d'infrastructure pour qui le vendredi c'est permis.
+                </p>
+                <br>
+                <p class="home-text">
+                    <b>Partager</b>, son aventure et son expérience à toutes les occasions. Une fois par mois lors du
+                    WeShare toute l'équipe se retrouve pendant une journée pour échanger, se former et s'amuser.
+                    Mais c'est aussi, écrire des articles, suivre et donner des conférences et participer à des
+                    meetups.
+                </p>
+                <br>
+                <p class="home-text">
+                    <b>S'amuser</b>, c'est important aussi ! Nous passons suffisament de temps dans notre vie à
+                    travailler. Pas question pour nous de le passer à être triste et soucieux. Nous nous retrouvons
+                    régulièrement lors des <b>WeParty</b> pour découvrir de nouveaux bars insolites de la capitale.
+                    Une fois par an, nous nous réunissons aussi en séminaire pour développer de nouvelles compétences
+                    avec les GO de Marrakech et d'ailleurs.
+                </p>
+                <br>
+                <p class="home-text">
+                    <b>Décider</b>, de la destinée de sa société. Nous avons une culture d'entreprise forte de
+                    transparence et de collaboration. Parce que nous n'avons pas la prétention d'être parfait, nous
+                    cherchons tous ensemble à nous améliorer et plus généralement, à améliorer la vie chez Wescale.
+                    Chacun a son mot à dire et tous le monde est écouté. Notre but est de grandir et de nous épanouir
+                    ensemble.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 <div class="content">
     <section>
-        <div class="container">
-
-            <div class="row">
-                <div class="col-md-12">
-                    <h1 class="title">Deviens un Scaler</h1>
+    <div class="container job-profils">
+<div class="row">
+                <div class="col-xs-12">
+                    <h1 class="title"><a id="rejoignez-nous" href="#rejoignez-nous" data-toggle="modal"
+                                         data-target="#rejoignez-nous-modal">Toi aussi deviens Scaler</a></h1>
+                    <p><a id="rejoignez-nous-2" href="#rejoignez-nous" data-toggle="modal"
+                          data-target="#rejoignez-nous-modal">Epapappapaapapapapapapap papapaap djenkrfbigniergfi</a></p>
                 </div>
+    </div>
+            <div class="row">
+                <div class="col-xs-12 col-md-4">
+                    <h2>
+                        <a id="rejoignez-nous-6" href="#rejoignez-nous" data-toggle="modal"
+                           data-target="#rejoignez-nous-modal">
+                            Cloud <span class="bold">Designer</span>
+                        </a></h2>
+                    <a id="rejoignez-nous-3" href="#rejoignez-nous" data-toggle="modal"
+                       data-target="#rejoignez-nous-modal">
+                        <img src="{{"/images/cloud-designer-black.png"| relative_url }}" alt="Cloud Designer" /></a>
+                    <p><a id="rejoignez-nous-7" href="#rejoignez-nous" data-toggle="modal"
+                          data-target="#rejoignez-nous-modal">
+                        Vous avez une appétence pour l’analyse des besoins business et des enjeux stratégiques, de
+                        solides bases techniques Cloud pour être à même de proposer des processus et des architectures
+                        réalistes, bâties pour tenir et durer.</a></p>
+                </div>
+                <div class="col-xs-12 col-md-4">
+                    <h2>
+                        <a id="rejoignez-nous-8" href="#rejoignez-nous" data-toggle="modal"
+                           data-target="#rejoignez-nous-modal">
+                            Cloud <span class="bold">Builder</span
+                        ></a>
+                    </h2>
+                    <a id="rejoignez-nous-4" href="#rejoignez-nous" data-toggle="modal"
+                       data-target="#rejoignez-nous-modal">
+                        <img src="{{"/images/cloud-builder-black.png"| relative_url }}" alt="Cloud Builder" /></a>
+                    <p>
+                        <a id="rejoignez-nous-9" href="#rejoignez-nous" data-toggle="modal"
+                           data-target="#rejoignez-nous-modal">
+                            Vous connaissez les briques utiles au fonctionnement d'un SI ou d'une usine logicielle. Vous
+                            aimez les
+                            approches orientées services. Vous êtes bilingues DevOps. Venez construire et mettre en
+                            place des
+                            solutions Cloud.</a></p>
+                </div>
+                <div class="col-xs-12 col-md-4">
+                    <h2>
+                        <a id="rejoignez-nous-10" href="#rejoignez-nous" data-toggle="modal"
+                           data-target="#rejoignez-nous-modal">
+                            Cloud <span class="bold">Runner</span>
+                        </a>
+                    </h2>
+                    <a id="rejoignez-nous-5" href="#rejoignez-nous" data-toggle="modal"
+                       data-target="#rejoignez-nous-modal">
+                        <img src="{{"/images/cloud-runner-black.png"| relative_url }}" alt="Cloud Runner" /></a>
+                    <p>
+                        <a id="rejoignez-nous-11" href="#rejoignez-nous" data-toggle="modal"
+                           data-target="#rejoignez-nous-modal">
+                            Vous êtes un pro du système, de l'automatisation, du monitoring et du réseau. Vous avez le
+                            goût des
+                            prods bien huilées et sécurisées. Vous aimez les architectures qui en imposent.
+                            Venez opèrer et faire évoluer les solutions Cloud en lien direct avec les développeurs.
+                        </a>
+                    </p>
+                </div>
+                {% include wescale-recrute.html %}
             </div>
 
-            <div class="row">
-                <div class="col-md-12 ">
-                    <p>
-                        WeScale en quelques mots, c’est à la fois une start-up et une société de conseil, dédiée au cloud computing.
-Nous avons une équipe de folie, uniquement des passionnés (chacun par ses sujets, qu’ils soient techniques ou non).
-Rejoindre WeScale, c’est : partage de connaissances / meetups / WeShare / pots ...
-                    </p>
-
-                </div>
-                <!--<div class="col-md-4 valeurs">
-                    <h2>Nos valeurs</h2>
-                    <ul>
-                        <li>
-                            Passion
-                        </li>
-                        <li>
-                            Fun
-                        </li>
-                        <li>
-                            Ecoute
-                        </li>
-                        <li>
-                            Partage
-                        </li>
-                        <li>
-                            Amélioration continue
-                        </li>
-                        <li>
-                            Simplicité
-                        </li>
-                        <li>
-                            Amitié
-                        </li>
-                        <li>
-                            Ouverture
-                        </li>
-                        <li>
-                            Tolérance
-                        </li>
-                    </ul>
-
-                </div>-->
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <h1 class="title">L'équipe</h1>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="equipe col-md-12">
-
-                        Cloud Runner
-Vous êtes un pro du système, de l'automatisation, du monitoring et du réseau. Vous avez le goût des prods bien huilées et sécurisées. Vous aimez les architectures qui en imposent. Venez opérer et faire évoluer les solutions Cloud en lien direct avec les développeurs.
-Cloud Designer
-Vous avez une appétence pour l’analyse des besoins business et des enjeux stratégiques, de solides bases techniques Cloud pour être à même de proposer des processus et des architectures réalistes, bâties pour tenir et durer.
-Cloud Builder
-Vous connaissez les briques utiles au fonctionnement d'un SI ou d'une usine logicielle. Vous aimez les approches orientées services. Vous êtes bilingues DevOps. Venez construire et mettre en place des solutions Cloud.
-
-                    </div>
+    </div>
     </section>
 </div>
