Finalize first version of job page

--- a/job.html
+++ b/job.html
@@ -1,62 +1,87 @@
 ---
 layout: default
 title: Job - Wescale - Cloud expert
-class: partenariats
+class: job
 ---
-<section class="home-top">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 home-content">
+<div class="content">
+    <section class="">
+        <div class="container">
 
-                <h1 class="title">Wescale recrute !</h1>
-                <p class="home-text">
-                    WeScale en quelques mots, c’est à la fois une start-up et une société de conseil, dédiée au cloud computing.
-                    Nous sommes une équipe de passionnés (chacun par ses sujets, qu’ils soient techniques ou non).
-                </p>
-                <h2>Rejoindre Wescale c'est :</h2>
 
-                <p class="home-text">
-                    <b>Faire vivre sa passion</b>, avec d'autres fous de cloud, d'automatisation, bref de développement
-                    d'infrastructure pour qui le vendredi c'est permis.
-                </p>
-                <br>
-                <p class="home-text">
-                    <b>Partager</b>, son aventure et son expérience à toutes les occasions. Une fois par mois lors du
-                    WeShare toute l'équipe se retrouve pendant une journée pour échanger, se former et s'amuser.
-                    Mais c'est aussi, écrire des articles, suivre et donner des conférences et participer à des
-                    meetups.
-                </p>
-                <br>
-                <p class="home-text">
-                    <b>S'amuser</b>, c'est important aussi ! Nous passons suffisament de temps dans notre vie à
-                    travailler. Pas question pour nous de le passer à être triste et soucieux. Nous nous retrouvons
-                    régulièrement lors des <b>WeParty</b> pour découvrir de nouveaux bars insolites de la capitale.
-                    Une fois par an, nous nous réunissons aussi en séminaire pour développer de nouvelles compétences
-                    avec les GO de Marrakech et d'ailleurs.
-                </p>
-                <br>
-                <p class="home-text">
-                    <b>Décider</b>, de la destinée de sa société. Nous avons une culture d'entreprise forte de
-                    transparence et de collaboration. Parce que nous n'avons pas la prétention d'être parfait, nous
-                    cherchons tous ensemble à nous améliorer et plus généralement, à améliorer la vie chez Wescale.
-                    Chacun a son mot à dire et tous le monde est écouté. Notre but est de grandir et de nous épanouir
-                    ensemble.
-                </p>
+            <div class="row">
+                <div class="col-md-offset-1 col-md-10 ">
+
+                    <h1 class="title">Wescale recrute !</h1>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-offset-1 col-md-10 history">
+
+                    <p>
+                        WeScale en quelques mots, c’est à la fois une start-up et une société de conseil, dédiée au
+                        cloud computing.
+                        Nous sommes une équipe de passionnés (chacun par ses sujets, qu’ils soient techniques ou non).
+                    </p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-offset-1 col-md-10 history">
+                    <h2>Rejoindre Wescale c'est :</h2>
+                    <ul>
+                        <li><p>
+                            <b>Faire vivre sa passion</b>, avec d'autres fous de cloud, d'automatisation, bref de
+                            développement
+                            d'infrastructure pour qui mettre en production le vendredi est la norme.
+                        </p>
+                        </li>
+                        <li><p>
+                            <b>Partager</b>, son aventure et son expérience à toutes les occasions. Une fois par mois
+                            lors du
+                            WeShare toute l'équipe se retrouve pendant une journée pour échanger, se former et s'amuser.
+                            Mais c'est aussi, écrire des articles, suivre et donner des conférences et participer à des
+                            meetups.
+                        </p>
+                        </li>
+                        <li><p>
+                            <b>S'amuser !</b> Nous passons suffisament de temps dans notre vie à
+                            travailler. Pas question pour nous de le passer à être triste et soucieux. Nous nous
+                            retrouvons
+                            régulièrement lors des <b>WeParty</b> pour découvrir de nouveaux bars insolites de la
+                            capitale.
+                            Une fois par an, nous nous réunissons aussi en séminaire pour développer de nouvelles
+                            compétences
+                            avec les <b>GO de Marrakech et d'ailleurs</b>.
+                        </p>
+                        </li>
+                        <li><p>
+                            <b>Décider</b>, de la destinée de sa société. Nous avons une culture d'entreprise forte de
+                            transparence et de collaboration. Parce que nous n'avons pas la prétention d'être parfait,
+                            nous
+                            cherchons tous ensemble à nous <b>améliorer</b> et plus généralement, à <b>améliorer la vie
+                            chez
+                            Wescale</b>.
+                            Chacun a son mot à dire et tous le monde est écouté. Notre but est de grandir et de nous
+                            épanouir
+                            ensemble.
+                        </p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-    </div>
-</section>
-<div class="content">
+    </section>
     <section>
-    <div class="container job-profils">
-<div class="row">
+        <div class="container job-profils">
+            <div class="row">
                 <div class="col-xs-12">
                     <h1 class="title"><a id="rejoignez-nous" href="#rejoignez-nous" data-toggle="modal"
                                          data-target="#rejoignez-nous-modal">Toi aussi deviens Scaler</a></h1>
                     <p><a id="rejoignez-nous-2" href="#rejoignez-nous" data-toggle="modal"
-                          data-target="#rejoignez-nous-modal">Epapappapaapapapapapapap papapaap djenkrfbigniergfi</a></p>
+                          data-target="#rejoignez-nous-modal">Voici, les profils que nous cherchons. Si tu as de bonnes
+                        idées et que tu penses pouvoir nous aider. N'hésite plus, dis le nous.</a></p>
                 </div>
-    </div>
+            </div>
             <div class="row">
                 <div class="col-xs-12 col-md-4">
                     <h2>
@@ -69,7 +94,7 @@ class: partenariats
                         <img src="{{"/images/cloud-designer-black.png"| relative_url }}" alt="Cloud Designer" /></a>
                     <p><a id="rejoignez-nous-7" href="#rejoignez-nous" data-toggle="modal"
                           data-target="#rejoignez-nous-modal">
-                        Vous avez une appétence pour l’analyse des besoins business et des enjeux stratégiques, de
+                        Tu as une appétence pour l’analyse des besoins business et des enjeux stratégiques, de
                         solides bases techniques Cloud pour être à même de proposer des processus et des architectures
                         réalistes, bâties pour tenir et durer.</a></p>
                 </div>
@@ -86,11 +111,10 @@ class: partenariats
                     <p>
                         <a id="rejoignez-nous-9" href="#rejoignez-nous" data-toggle="modal"
                            data-target="#rejoignez-nous-modal">
-                            Vous connaissez les briques utiles au fonctionnement d'un SI ou d'une usine logicielle. Vous
-                            aimez les
-                            approches orientées services. Vous êtes bilingues DevOps. Venez construire et mettre en
-                            place des
-                            solutions Cloud.</a></p>
+                            Tu connais les briques utiles au fonctionnement d'un SI ou d'une usine logicielle. Tu
+                            aimes les
+                            approches orientées services. Tu es bilingues DevOps. Viens construire et mettre en
+                            place des solutions Cloud avec nous.</a></p>
                 </div>
                 <div class="col-xs-12 col-md-4">
                     <h2>
@@ -105,16 +129,31 @@ class: partenariats
                     <p>
                         <a id="rejoignez-nous-11" href="#rejoignez-nous" data-toggle="modal"
                            data-target="#rejoignez-nous-modal">
-                            Vous êtes un pro du système, de l'automatisation, du monitoring et du réseau. Vous avez le
+                            Tu es un pro du système, de l'automatisation, du monitoring et du réseau. Tu as le
                             goût des
-                            prods bien huilées et sécurisées. Vous aimez les architectures qui en imposent.
-                            Venez opèrer et faire évoluer les solutions Cloud en lien direct avec les développeurs.
+                            prods bien huilées et sécurisées. Tu aimes les architectures qui en imposent.
+                            Viens opèrer et faire évoluer les solutions Cloud en lien direct avec les développeurs.
                         </a>
                     </p>
                 </div>
+
+
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="more">
+                        <a href="#rejoins-nous" id="rejoins-nous" data-toggle="modal"
+                           data-target="#rejoignez-nous-modal">
+                            <img src="{{"/images/more-black.png" | relative_url }}" alt="Allez viens, on est bien !"
+                            width="52" height="44" /><br/>
+                            Allez viens, on est bien !
+                        </a>
+                    </p>
+                </div>
+
                 {% include wescale-recrute.html %}
             </div>
 
-    </div>
+        </div>
     </section>
 </div>
